; ModuleID = '/home/carl/AnghaBench/beanstalkd/extr_prot.c_epollq_apply.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/extr_prot.c_epollq_apply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, %struct.TYPE_4__* }

@epollq = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [9 x i8] c"sockwant\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @epollq_apply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @epollq_apply() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = alloca i32, align 4
  br label %3

3:                                                ; preds = %25, %0
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @epollq, align 8
  %5 = icmp ne %struct.TYPE_4__* %4, null
  br i1 %5, label %6, label %26

6:                                                ; preds = %3
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @epollq, align 8
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %1, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @epollq, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 2
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** @epollq, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 2
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %12, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @sockwant(i32* %14, i32 %17)
  store i32 %18, i32* %2, align 4
  %19 = load i32, i32* %2, align 4
  %20 = icmp eq i32 %19, -1
  br i1 %20, label %21, label %25

21:                                               ; preds = %6
  %22 = call i32 @twarn(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %24 = call i32 @connclose(%struct.TYPE_4__* %23)
  br label %25

25:                                               ; preds = %21, %6
  br label %3

26:                                               ; preds = %3
  ret void
}

declare dso_local i32 @sockwant(i32*, i32) #1

declare dso_local i32 @twarn(i8*) #1

declare dso_local i32 @connclose(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
